Working rendering box

--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -7,6 +7,9 @@ repositories {
 }
 
 dependencies {
+    apiImplementation(fg.deobf("com.ldtteam:blockui:${project.blockUI_version}")) {
+        transitive = false
+    }
     implementation(fg.deobf("com.ldtteam:blockui:${project.blockUI_version}")) {
         transitive = false
     }
