--- a/gradle.properties
+++ b/gradle.properties
@@ -26,12 +26,12 @@ additionalMinecraftVersions=1.19;1.19.1
 mappingsChannel=parchment
 mappingsVersion=2022.08.14-1.19.2
 
-dataGeneratorsVersion=0.1.48-ALPHA
-blockUI_version=1.19.2-0.0.95-ALPHA
-
 # some mods include the MC version as part of their "real" version number, others
 # store them separately (even if they look like they're included in the filename).
 # it's important to get them the right way around for mods.toml to work properly.
+
+dataGeneratorsVersion=0.1.48-ALPHA
+blockUI_version=1.19.2-1.0.117-BETA
 
 useShadowJar=false
 
