I don't know what I'm doing!

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,9 +47,8 @@ usesDatagen=true
 usesOptifine=false
 usesParchment=true
 useDefaultTestSystem=false
-runtimeSourceSets=api;main
-librarySourceSets=api;main;datagen;
-projectHasApi=true
+runtimeSourceSets=main
+librarySourceSets=main;datagen;
 primaryJarClassifier=
 isFMLLibrary=false
 
