--- a/gradle.properties
+++ b/gradle.properties
@@ -8,47 +8,45 @@ modBaseName=Buildserver Actions
 
 javaVersion=17
 useJavaToolChains=true
-fml_range=[38,)
-forge_range=[41.1.0,)
+fml_range=[47,)
+forge_range=[47.0.0,)
 
 #The currently running forge.
-forgeVersion=43.1.47
+forgeVersion=47.1.3
 #The minimal needed forge, as marked in metadata and curseforge.
-forgeMinVersion=41.1.0
+forgeMinVersion=47.0.0
 
 #The version for forge (dependency)
-exactMinecraftVersion=1.19.2
+exactMinecraftVersion=1.20.1
 #The main version on curseforge
-minecraftVersion=1.19
-#Comma seperated list of mc versions, which are marked as compatible on curseforge
-additionalMinecraftVersions=1.19;1.19.1
+minecraftVersion=1.20.1
 
 mappingsChannel=parchment
-mappingsVersion=2022.08.14-1.19.2
+mappingsVersion=2023.09.03-1.20.1
 
 # some mods include the MC version as part of their "real" version number, others
 # store them separately (even if they look like they're included in the filename).
 # it's important to get them the right way around for mods.toml to work properly.
 
-dataGeneratorsVersion=0.1.48-ALPHA
-blockUI_version=1.19.2-1.0.117-BETA
+blockUI_version=1.20.1-1.0.128-BETA
 
 useShadowJar=false
 
-githubUrl=
-gitUrl=
-gitConnectUrl=
-projectUrl=
+githubUrl=https://github.com/ldtteam/BuildServerActions
+gitUrl=https://github.com/ldtteam/BuildServerActions.git
+gitConnectUrl=https://github.com/ldtteam/BuildServerActions.git
+projectUrl=https://curseforge.com/minecraft/mc-mods/minecolonies-buildserver-quick-actions
 
-curseId=
-usesCurse=
+curseId=937293
+usesCurse=true
+requiredCurseDependencies=blockui
 
-usesDatagen=true
+usesDatagen=false
 usesOptifine=false
 usesParchment=true
 useDefaultTestSystem=false
 runtimeSourceSets=main
-librarySourceSets=main;datagen;
+librarySourceSets=main
 primaryJarClassifier=
 isFMLLibrary=false
 
