--- a/gradle.properties
+++ b/gradle.properties
@@ -30,26 +30,22 @@ mappingsVersion=2022.08.14-1.19.2
 # store them separately (even if they look like they're included in the filename).
 # it's important to get them the right way around for mods.toml to work properly.
 
-dataGeneratorsVersion=0.1.48-ALPHA
-blockUI_version=1.19.2-1.0.117-BETA
+blockUI_version=1.19.2-1.0.129-BETA
 
 useShadowJar=false
 
-githubUrl=
-gitUrl=
-gitConnectUrl=
-projectUrl=
+githubUrl=https://github.com/ldtteam/BuildServerActions
+gitUrl=https://github.com/ldtteam/BuildServerActions.git
+gitConnectUrl=https://github.com/ldtteam/BuildServerActions.git
+projectUrl=https://curseforge.com/minecraft/mc-mods/minecolonies-buildserver-quick-actions
 
-curseId=
-usesCurse=
+curseId=937293
+usesCurse=true
+requiredCurseDependencies=blockui
 
-usesDatagen=true
+usesDatagen=false
 usesOptifine=false
 usesParchment=true
-useDefaultTestSystem=false
-runtimeSourceSets=main
-librarySourceSets=main;datagen;
-primaryJarClassifier=
-isFMLLibrary=false
+projectHasApi=false
 
 extendDefaultSourceSetConfiguration=true
