--- a/gradle.properties
+++ b/gradle.properties
@@ -44,10 +44,6 @@ requiredCurseDependencies=blockui
 usesDatagen=false
 usesOptifine=false
 usesParchment=true
-useDefaultTestSystem=false
-runtimeSourceSets=main
-librarySourceSets=main
-primaryJarClassifier=
-isFMLLibrary=false
+projectHasApi=false
 
 extendDefaultSourceSetConfiguration=true
