--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 modId=buildserveractions
 modGroup=com.ldtteam
-modVersion=0.0.1-LOCAL
+modVersion=1.1.0-RELEASE
 modBaseName=Buildserver Actions
 
 javaVersion=17
